--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.86"
-arboard = "3.4.0"
+arboard = { version = "3.4.0", features = ["wayland-data-control"] }
 gumdrop = "0.8.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9.34"
